# fluxrs

./: .gitignore  Cargo.toml  Gemfile  README.md  RELEASE_NOTES.md
.github/workflows/: release.yml
crates/fluxrs-cli/: Cargo.toml
crates/fluxrs-cli/src/: main.rs
crates/fluxrs-cli/src/cmd/: cli.rs  config.rs
crates/fluxrs-core/: Cargo.toml
crates/fluxrs-core/src/: archiverecord.rs  concentrationunit.rs  constants.rs  cycle_navigator.rs  cycle_processor.rs  cycle_recalcer.rs  datatype.rs  flux.rs  fluxes_schema.rs  gas_plot.rs  gaschannel.rs  gastype.rs  html_report.rs  index.rs  lib.rs  mode.rs  processevent.rs  project.rs  stats.rs  structs.rs  utils.rs
crates/fluxrs-core/src/cmd/: cli.rs  config.rs
crates/fluxrs-core/src/cycle/: cycle.rs  cycletiming.rs  gaskey.rs  mod.rs
crates/fluxrs-core/src/data_formats/: chamberdata.rs  gasdata.rs  heightdata.rs  meteodata.rs  mod.rs  timedata.rs
crates/fluxrs-core/src/db/: fluxes_schema.rs  migrate.rs  mod.rs
crates/fluxrs-core/src/flux/: expflux.rs  flux.rs  fluxfiterror.rs  fluxkind.rs  fluxmodel.rs  fluxunit.rs  linflux.rs  mod.rs  polyflux.rs  robflux.rs
crates/fluxrs-core/src/instruments/: instruments.rs  mod.rs
crates/fluxrs-core/src/stats/: expreg.rs  linreg.rs  mod.rs  polyreg.rs  robreg.rs  stats.rs
crates/fluxrs-gui/: Cargo.toml
crates/fluxrs-gui/src/: cycle_navigator.rs  flux_extension.rs  gastype_extension.rs  keybinds.rs  main.rs  utils.rs
crates/fluxrs-gui/src/ui/: dl_ui.rs  file_ui.rs  gasmetrics.rs  init_ui.rs  load_ui.rs  main_app.rs  main_frame.rs  mod.rs  plot_width.rs  plotting_ui.rs  recalc.rs  table_ui.rs  toggle_traces.rs  utils.rs  validation_ui.rs
crates/fluxrs-gui/src/ui/download_app/: download_app.rs  mod.rs
crates/fluxrs-gui/src/ui/file_app/: file_app.rs  mod.rs
crates/fluxrs-gui/src/ui/init_app/: init_app.rs  mod.rs
crates/fluxrs-gui/src/ui/load_app/: load_app.rs  mod.rs
crates/fluxrs-gui/src/ui/manage_proj/: create_ui.rs  datepickerstate.rs  delete_ui.rs  manage_ui.rs  mod.rs  project_ui.rs
crates/fluxrs-gui/src/ui/table_app/: mod.rs  table_app.rs
crates/fluxrs-gui/src/ui/validation/: file_app.rs  init_ui.rs  load_ui.rs  mod.rs  plot_fits.rs  plotting_ui.rs  toggle_traces.rs  validation_ui.rs
crates/fluxrs-gui/src/ui/validation_app/: cycle_navigator.rs  enable_plots.rs  init_ui.rs  load_ui.rs  mod.rs  plot_width.rs  plotting_ui.rs  validation_ui.rs
docs/: Workflow.md  _config.yml  commandline.md  controls.md  create_project.md  data_validation.md  file_formats.md  index.md  keybinds.md  workflow.md
src/: app.rs  app_plotting.rs  appview.rs  archiverecord.rs  chamber.rs  cmd.rs  cmd_old.rs  concentrationunit.rs  constants.rs  csv_parse.rs  cycle.rs  cycle_navigator.rs  errorcode.rs  flux.rs  fluxes_schema.rs  gas_plot.rs  gaschannel.rs  gasdata.rs  gastype.rs  get_paths.rs  html_report.rs  instruments.rs  keybinds.rs  lib.rs  lin_reg.rs  main.rs  main_app.rs  meteodata.rs  myapp.rs  processevent.rs  project_app.rs  query.rs  stats.rs  structs.rs  timedata.rs  traits.rs  types.rs  utils.rs  validation_app.rs  volumedata.rs
src/cmd/: cli.rs  config.rs
src/cycle/: cycle.rs
src/data_formats/: chamberdata.rs  gasdata.rs  heightdata.rs  meteodata.rs  mod.rs  timedata.rs  volumedata.rs
src/instruments/: instruments.rs
src/ui/: dl_ui.rs  file_ui.rs  init_ui.rs  load_ui.rs  main_app.rs  main_frame.rs  mod.rs  plotting_ui.rs  processor.rs  project_ui.rs  recalc.rs  recalcer.rs  table_ui.rs  tz_picker.rs  validation_ui.rs
src/ui/manage_proj/: create_ui.rs  delete_ui.rs  manage_ui.rs  mod.rs  project.rs  project_ui.rs
