[package]
name = "fluxrs"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
statrs = "0.18.0"
nalgebra = "0.33.2"
dyn-clone = "1.0.19"
rayon = "1.10.0"
egui_file = "0.22"
egui_extras = { version = "*", default-features = false, features = ["datepicker"] }
rusqlite = { version = "0.35.0", features = ["bundled"] }
fxhash = "0.2.1"
csv = "1.3.1"
chrono = "0.4.39"
chrono-tz = "0.10.1"
glob = "0.3.2"
itertools = "0.14.0"
plotters = "0.3.7"
egui = {version = "0.31.0", features = ["serde"]}
ecolor = "0.31.0"
eframe = "0.31.0"
egui_plot = "0.32.1"
image = "0.25.0"
futures = "0.3.31"
tokio = {version = "1.44.1", features = ["rt-multi-thread", "macros", "sync", "time"]}

[profile.release]
# lto = "fat"
codegen-units = 1
# strip = true

[profile.release-fast]
inherits = "release"
lto = "fat"
codegen-units = 1
strip = true
