[workspace]
members = ["crates/fluxrs-core", "crates/fluxrs-gui"]
default-members = ["crates/fluxrs-gui"]
resolver = "2"

[workspace.package]
documentation = "https://kootepe.github.io/fluxrs/"
version = "0.3.0"
edition = "2021"

[workspace.dependencies]
chrono = {version = "0.4.39", features = ["serde", "clock"]}
chrono-tz = {version = "0.10.1", features = ["serde"]}
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
rustc-hash = "2.1.1"
fxhash = "0.2.1"
tokio = {version = "1.44.1", features = ["rt-multi-thread", "macros", "sync", "time"]}
csv = "1.3.1"
rusqlite = { version = "0.35.0", features = ["bundled", "chrono"] }
clap = {version ="4.5.47", features = ["derive"]}


[profile.release]
# lto = "fat"
codegen-units = 1
# strip = true

[profile.release-fast]
inherits = "release"
lto = "fat"
codegen-units = 1
strip = true

[profile.dev]
codegen-units = 16
opt-level = 0
