[package]
name = "fluxrs_cli"
version = "0.4.6"
edition = "2021"

[dependencies]
serde = {workspace = true}
serde_json = {workspace = true}
chrono = {workspace = true}
chrono-tz = {workspace = true}
rustc-hash = {workspace = true}
fxhash = {workspace = true}
tokio = {workspace = true}
csv = { workspace = true }
rusqlite = {workspace = true}
clap = {workspace = true}

rand = "0.9.2"
statrs = "0.18.0"
dyn-clone = "1.0.19"
nalgebra = "0.33.2"
rayon = "1.10.0"
glob = "0.3.2"
thiserror = "2.0.16"
futures = "0.3.31"
# unused?
itertools = "0.14.0"
# unused?
plotters = "0.3.7"

fluxrs-core = { path = "../fluxrs-core"  }
